syntax = "proto3";

package pb;

message BlockOffset{
  bytes key = 1;
  uint32 offset = 2;
  uint32 len = 3;
}

message TableIndex{
  repeated BlockOffset offsets = 1;
  bytes  bloomFilter = 2;
  uint64 maxVersion = 3;
  uint32 keyCount = 4;
  uint32 staleDataSize = 5;
}

message ManifestModifies {
        repeated ManifestModify modifies = 1;
}

message ManifestModify {
        uint64 Id = 1;
        enum Operation {
                CREATE = 0;
                DELETE = 1;
        }
        Operation Op   = 2;
        uint32 Level   = 3; // Only used for CREATE
        bytes Checksum = 4; // Only used for CREATE
}